add statemachine to mobs TODO: fix auctionhouse buy menu pagination not workin